Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@ nav {
 }
 #content {
     display:none;
-    overflow:hidden;
     position:absolute;
     top:100px;
     left:210px;
@@ -170,6 +169,10 @@ nav {
         margin:50px 0 30px 0;
         font-size:45px;
         font-weight:bold;
+    }
+    #content .ajax-content {
+        overflow:scroll;
+        max-height: 208px;
     }
 
 /* footer */
